# osw-python

./: .coveragerc  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  404.html  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  codecov.yaml  conf.py  conftest.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  search.html  setup.cfg  setup.py  sitemap.xml  tox.ini  zensical.toml
.github/actions/setup-python-env/: action.yml
.github/workflows/: ci.yml  docs.yml  integration.yml  main.yml  on-release-main.yml  pytest.yml
auth/: index.html
authors/: index.html
changelog/: index.html
contributing/: index.html
controller/: index.html
demo/stress_strain/: stress_strain.py
demo/stress_strain/test_data/: ZwickRoell_Example.TRA
demo/wiki_page_handling/: some_test.py
dev/: index.html
docs/: about.md  auth.md  controller.md  dev.md  get-started.md  index.md  model.md  osl.md  osw.md  reference.md  requirements.txt  tools.md
docs/api/: auth.md  controller.md  core.md  index.md  model.md  wiki-tools.md
docs/stylesheets/: extra.css
docs/tutorials/: basics.ipynb  start_tutorial.ipynb
examples/: .env_example  accounts.pwd.yaml  clean_demo_platform.py  controller_logic.py  create_account.py  create_entity.py  create_page_package.py  create_users_from_excel.py  database_access.py  delete_pages.py  device_inventory.py  ensure_dependencies.py  entity_manipulation.py  file_download_minimal.py  file_upload_download.py  generate_rdf.py  get_page_content.py  gui_local_slot_editing.py  inter_osw_copy_page.py  load_entity.py  local_editing.py  offline_content_package.py  ontology_import emmo.py  ontology_import.py  ontology_import_mwo.py  oold_integration.py  page_manipulation.py  query_minimal.py  register_model.py  settings.example.json  settings.json  store_entity.py  update_local_model.py  update_quantities.py  use_express_functions.py  users_to_import.xlsx  work_without_express.py
examples/data_processing/: local_jsonpath_queries.py  regex_matching.py
examples/lab/: eln_export_import.py
examples/prefect/: deploy_flow.py  hello_world.py  notify_teams.py
libs/: evaluation_functions.py  filehandling.py  physical_functions.py  plot_functions.py
libs/vendor_specific/: ZwickRoell_TRA.py
libs/vendor_specific/test_data/: Zyklierung_Zug_15Proz-0N_bisRiss1.TRA
license/: index.html
model/: index.html
nb/datapipelines/: ChainableObject.ipynb
nb/quantities/: Quantities.ipynb  Quantities.py  README.MD  Units.ipynb  Units.py  fetchData.py  quantities.py  quantityClasses.py  quantityFunctions.py  quantityOSW.py  utils.py
nb/quantities/archive/: Onto2Wiki_qudtQuantities.ipynb  broader.ipynb  buildDictionaryTest.ipynb  httpRequest.ipynb  idea.ipynb  querys.ipynb  searchRunaways.ipynb
nb/quantities/data copy/: _ddict.json  _qdict.json  _udict.json  dCgsDict.json  dImpDict.json  dbpdict.json  sample.json
nb/translations/: DeeplTranslate.ipynb  JsObjectToJson.ipynb
osl/: index.html
osw/: index.html
readme/: index.html
reference/: index.html
scripts/migration/: file_page_migration.py  legacy_articles  regex_pattern.py
search/: search_index.json
src/: WtSite.py  __init__.py  chainables.py  networkx_drawio_tools.py  networkx_osl_tools.py  osl.py  sparql_client_smw.py  wiki_tools.py  wtsite.py
src/filehandling/: filehandling.py
src/filehandling/vendor_specific/: ZwickRoell_TRA.py
src/model/: Entity.py
src/model/KB/: Entity.json  Entity.py
src/osw/: __init__.py  auth.py  core.py  custom_types.py  data_import_utility.py  defaults.py  express.py  ontology.py  osl.py  params.py  sparql_client_smw.py  types.py  util.py  wiki_tools.py  wtsite.py
src/osw/controller/: __init__.py  database.py  datatool.py  entity.py  page_package.py  tsdb.py
src/osw/controller/file/: base.py  file.py  local.py  memory.py  remote.py  s3.py  wiki.py
src/osw/data/: data_import_utility.py  import_utility.py  mining.py
src/osw/mcp/: __init__.py  __main__.py  config.py  connection.py  ledger.py  serialization.py  server.py
src/osw/mcp/tools/: __init__.py  entities.py  files.py  schema.py  search.py  slots.py  status.py
src/osw/model/: Entity.py  entity.py  page_package.py  static.py
src/osw/ui/anywidget/: JsonEditorWidget.ipynb  jsoneditor.py
src/osw/ui/nicegui/: jsoneditor.py  main.py
src/osw/ui/panel/anywidget_vite/: jsoneditor.py  main.py
src/osw/ui/vue/: README.md  package-lock.json  package.json  vite.config.anywidget.mjs  vite.config.js  vite.config.nicegui.js
src/osw/ui/vue/src/: jsoneditor.vue  jsoneditor_component.js  jsoneditor_component.less
src/osw/utils/: __init__.py  _httpx_gateway.py  code_postprocessing.py  codegen.py  data_import_utility.py  oold.py  prefect.py  regex.py  regex_pattern.py  strings.py  templates.py  util.py  wiki.py  wikitext.py  workflow.py
tests/: conftest.py  controller_mixin.py  data_import_utility_test.py  file_page_migration_dependencies.py  sparql_client_test.py  test_credential_manager.py  test_express.py  test_file_page_migration.py  test_mcp_config.py  test_mcp_ledger.py  test_mcp_serialization.py  test_mcp_tools.py  test_model.py  test_osl.py  test_schema_generation.py  test_store_entity_failure.py  test_wiki_tools.py  test_wtsite_edit.py  test_wtsite_session_lock.py
tests/integration/: conftest.py  db_test.py  example_ontology.ttl  file_page_migration_dependencies.py  login_test.py  ontology_import_test.py  performance_test.py  store_and_load_test.py  test_express.py  test_express_init.py  test_file_controller.py  test_file_page_migration.py  test_mcp_server.py  test_page_export_import.py  test_page_package.py  test_rdf_generation.py  test_wtsite.py
tests/ui/panel/: conftest.py  panel_app.py  panel_frontend_test.py
tests/utils/: code_postprocessing_test.py  oold.py  templates_test.py  utils_test.py  workflow_test.py
tools/: index.html
tutorials/: basics.ipynb
